<resources>
    <string name="app_name">Math Vio</string>
    <string name="scrore">Score</string>
    <string name="time">Time</string>
    <string name="inputnotblank">Time</string>
    <string name="status">Status:</string>
    <string name="resolve">Resolve:</string>
    <string name="result">Result:</string>
    <string name="doubleclick">Please click BACK again to exit !</string>
    <string name="summary_score">Summary :</string>
    <string name="find_equal">Find Equal Pair</string>
    <string name="hinhtamgiac">Triangle</string>
    <string name="hinhtron">Circle</string>
    <string name="hinhvuong">Square</string>
    <string name="hinhchunhat">Rectangle</string>
    <string name="hinhsao">Star</string>
    <string name="hinhlucgiac">Hexagon</string>
    <string name="hinhngugiac">Pentagon</string>
    <string name="thanhcong">Pass</string>
    <string name="thatbai">Failed</string>
    <string name="ga">duck</string>
    <string name="flower">flower</string>
    <string name="start_equal">🍭 Please select 2 consecutive cells of equal value.\n🍭 Select wrong 3 times, the test will end.\n🍭 Each wrong time minus 1 point</string>
    <string name="startmoutain">Bạn hãy đi tới đỉnh núi, bằng cách trả lời tất cả các câu hỏi chương trình đưa ra. Trả lời đúng mỗi câu được cộng 10 điểm, nếu trả lời sai trừ 1 điểm. Trả lời sai quá 3 lần bài thi sẽ kết thúc</string>
    <string name="start_monkey">You swipe to 2 sides. To find a board with the same value as the board.</string>
    <string name="break_home">Are you sure you want to quit?</string>
    <string name="exit_home">Quit Game</string>
    <string name="start">Start</string>
    <string name="grade1">Grade 1</string>
    <string name="grade2">Grade 2</string>
    <string name="grade3">Grade 3</string>
    <string name="grade4">Grade 4</string>
    <string name="grade5">Grade 5</string>
    <string name="khieulai">Report test</string>
    <string name="vip_item">Select the grade you want to upgrade to PRO ?</string>
    <string name="member_vip">🚀 Member Vip</string>
    <string name="buy_pro">👉 Learn all the rounds.\n\n 👉 Unlimited classes.\n\n 👉 Update the latest exercises.\n\n 👉 Don not be bothered by ads.</string>
    <string name="buy_now">VIP Upgrade</string>
    <string name="buy_affter">Buy Later</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phepcong">Addition</string>
    <string name="pheptru">Subtraction</string>
    <string name="phepcongvstru">Addition\n vs \nSubtraction</string>
    <string name="phepcongvstru2">Addition vs Subtraction</string>
    <string name="share">Share</string>
    <string name="cmt">Feedback</string>
    <string name="home">Home</string>
    <string name="title_notifi">Giúp Bé Học Giỏi</string>
    <string name="content_notifi">🚀Ứng dụng  học toán số 1\n🚀Giúp học sinh tiểu học nâng cao kiến thức môn toán\n🚀Đa dạng các bài toán giúp kích thích tư duy</string>
    <string name="share_app">Please share this app with your friends now !</string>
    <string name="rate">Write a review about this App ?</string>
    <string name="feedback">Join fanpage to comment ?</string>
    <string name="yesads1">YOU ARE USING PRO Version Grade 1 ✅ </string>
    <string name="yesads2">YOU ARE USING PRO Version Grade 2 ✅ </string>
    <string name="yesads3">YOU ARE USING PRO Version Grade 3 ✅ </string>
    <string name="yesads4">YOU ARE USING PRO Version Grade 4 ✅ </string>
    <string name="yesads5">YOU ARE USING PRO Version Grade 5 ✅ </string>
    <string name="yesadsall">YOU ARE USING PRO Version Grade All ✅ </string>
    <string name="sussespro">Please restart the application to experience the PRO version!</string>
    <string name="title_dialog_vip">VIP membership upgrade</string>
    <string name="content_dialog_vip">Upgrade to Vip member for unlimited play</string>
    <string name="default_notification_channel_id">toancap1</string>

        <string name="admob_app_id">ca-app-pub-5148482490300491~9852569762</string>
        <string name="admob_inapp">ca-app-pub-5148482490300491/2329302968</string>

<!--    &lt;!&ndash;    //Test&ndash;&gt;-->
<!--    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="admob_inapp">ca-app-pub-3940256099942544/1033173712</string>-->

    <string name="notifi_title">Regular Learning</string>
    <string name="notifi_content">Help children learn math well</string>


    <string name="of">of</string>

    <string name="vip1_check">PRO Grade 1 ✅</string>
    <string name="vip2_check">PRO Grade 2 ✅</string>
    <string name="vip3_check">PRO Grade 3 ✅</string>
    <string name="vip4_check">PRO Grade 4 ✅</string>
    <string name="vip5_check">PRO Grade 5 ✅</string>
    <string name="vip_all_check">Pro Grade All Grade ✅</string>

    <string name="vip1_warning">PRO Grade 1 ⚠</string>
    <string name="vip2_warning">PRO Grade 2 ⚠</string>
    <string name="vip3_warning">PRO Grade 3 ⚠</string>
    <string name="vip4_warning">PRO Grade 4 ⚠</string>
    <string name="vip5_warning">PRO Grade 5 ⚠</string>
    <string name="vip_all_warning">PRO Grade All ⚠</string>

</resources>