<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@drawable/bg_fores"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <ImageView
            android:layout_marginBottom="20dp"
           android:layout_alignParentBottom="true"
            android:src="@drawable/thomoi"
            android:layout_width="200dp"
            android:layout_height="279dp"/>

    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/bg_question_moutain"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_title_vip"
            android:text="@string/member_vip"
            android:textColor="@android:color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_content_buy_vip"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_centerInParent="true"
            android:text="@string/buy_pro"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
           android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginRight="30dp"
                android:paddingTop="2dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="onClick_Cancel_Vip"
                android:textColor="@android:color/black"
                android:background="@drawable/bt_gray"
                android:text="@string/buy_affter"
                android:layout_width="170dp"
                android:layout_height="46dp"/>
            <TextView
                android:id="@+id/tv_buy_vip"
android:onClick="onClick_Detail_Buy"
                android:paddingTop="2dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="23dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:background="@drawable/bt_blue"
                android:text="@string/buy_now"
                android:layout_width="190dp"
                android:layout_height="48dp"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>