<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_fores"
    android:layout_height="match_parent">

<RelativeLayout
    android:id="@+id/rl_link_main"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"

    android:layout_width="120dp"
    android:layout_height="120dp">
    <ImageView
        android:id="@+id/iv_halo_link_main"
        android:layout_centerInParent="true"
        android:background="@drawable/halo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ImageView
        android:id="@+id/iv_logo_link_main"
        android:onClick="onClickLinkApp"
        android:layout_centerInParent="true"
        android:src="@drawable/avata2"
        android:layout_width="70dp"
        android:layout_height="70dp"/>
</RelativeLayout>

    <TextView
        android:id="@+id/tv_main_start"
        android:text="@string/start"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/oranger"
      app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="onClickMainPlay"
        android:background="@drawable/ufo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.airbnb.lottie.LottieAnimationView


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="63dp"
        app:lottie_fileName="dan_chim.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />
    <ImageView
        android:id="@+id/iv_main_buyvip"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginRight="5dp"
        android:onClick="onClick_Buy_Vip_Main"
        android:src="@drawable/buy_vip_pro_vn"
        android:layout_width="200dp"
        android:layout_height="144dp"/>

    <TextView
      android:id="@+id/tv_Share_Main"
        android:visibility="gone"
        android:onClick="onClick_Share"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/share"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/bt_custon_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_Feed_Back"
        android:visibility="gone"
        android:onClick="onClick_FeedBack"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:text="@string/cmt"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/bt_custon_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
<ImageView
    android:layout_alignParentLeft="true"
android:onClick="onClickExit_Game"
    app:layout_constraintTop_toTopOf="parent"

    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="3dp"
    android:src="@drawable/close"
    android:layout_width="45dp"
    android:layout_height="45dp"/>
    <ImageView
        android:id="@+id/iv_notifi_main"
        android:visibility="gone"

        android:onClick="onClick_NotifiHenGio"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintRight_toRightOf="parent"

        android:src="@drawable/notifi"
        android:layout_width="40dp"
        android:layout_height="40dp"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_elephant_jumping"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_width="170dp"
        android:layout_height="180dp"
        app:lottie_fileName="con_huou.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />

</androidx.constraintlayout.widget.ConstraintLayout>